# lerke

./: Cargo.toml  Dockerfile  README.md
.deploy/: lerke.yaml
.deploy/lerke/: deployment.yaml  ingress.yaml  secrets.yaml  service.yaml
.github/workflows/: docker-publish.yml
migrations/: 001_initial.sql  002_generator_url.sql
src/: config.rs  deadman.rs  error.rs  lib.rs  main.rs  metrics.rs  prelude.rs
src/api/: messages.rs
src/db/: models.rs  queries.rs
src/discord/: notifier.rs
src/web/: debug.rs  formatting.rs  header.rs  history.rs  incident_detail.rs  incidents.rs  mod.rs
src/webhooks/: grafana.rs  mod.rs  uptime_kuma.rs
static/: styles.css
