[package]
name = "lerke"
version = "0.1.0"
edition = "2024"

[dependencies]
# web
actix-web = "4"
maud = { version = "0.26.0", features = ["actix-web"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }

# database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# discord
serenity = { version = "0.12.0", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# error handling
thiserror = "1.0"
anyhow = "1.0"

# logging
log = "0.4"
env_logger = "0.10"

# metrics
actix-web-opentelemetry = { version = "0.16.0", features = [
  "metrics",
  "metrics-prometheus",
] }
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = [
  "metrics",
  "rt-tokio-current-thread",
] }
opentelemetry-prometheus = "0.14"
prometheus = "0.13"

# misc
md5 = "0.7"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
